--- a/python_finesses.ipynb
+++ b/python_finesses.ipynb
@@ -43,7 +43,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Les \"décorateurs\"\n",
+    "* [Les Décorateurs](#deco)\n",
+    "  * [La Memoïsation](#memo)\n",
+    "  * [Le problème de l'arrêt](#stop)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"deco\"></a>\n",
+    "## Les Décorateurs\n",
+    "\n",
     "\n",
     "Un décorateur est une fonction qui modifie une fonction en l'enveloppant.\n",
     "C'est un [patron de conception](https://fr.wikipedia.org/wiki/Patron_de_conception)\n",
@@ -180,67 +192,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "en 3 secondes, on peut calculer 34 termes\n",
-      "le dernier est 9227465\n"
-     ]
-    }
-   ],
-   "source": [
-    "import itertools # une autre librairie standard fondamentale\n",
-    "\n",
-    "t=3 # timeout en secondes\n",
-    "\n",
-    "try:\n",
-    "    for i in decorators.itimeout(itertools.count(1),t): # dommage, pas de @itimeout for ... \n",
-    "        n=fib(i)\n",
-    "except decorators.TimeoutError:\n",
-    "    print('en %d secondes, on peut calculer %d termes'%(t,i))\n",
-    "    print('le dernier est',n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "en 3 secondes, on peut calculer 33 termes\n",
-      "le dernier est 3524578\n"
-     ]
-    }
-   ],
-   "source": [
-    "i,n = 0,0\n",
-    "@decorators.timeout(t) # implémentation interrompant la thread\n",
-    "def fibloop():\n",
-    "    global i,n\n",
-    "    while True: # boucle infinie sans le décorateur ...\n",
-    "        i=i+1\n",
-    "        n=fib(i)\n",
-    "        \n",
-    "try:\n",
-    "    fibloop()\n",
-    "except decorators.TimeoutError:\n",
-    "    print('en %d secondes, on peut calculer %d termes'%(t,i))\n",
-    "    print('le dernier est',n)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La \"[Memoïsation](https://fr.wikipedia.org/wiki/M%C3%A9mo%C3%AFsation)\"\n",
+    "<a id=\"memo\"></a>\n",
+    "### La [Memoïsation](https://fr.wikipedia.org/wiki/M%C3%A9mo%C3%AFsation)\n",
     "\n",
     "Patron de conception qui accélère les appels répétés à une fonction en mémorisant les résultats en fonction des paramètres"
    ]
@@ -334,6 +290,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"stop\"></a>\n",
+    "### Le Timeout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "en 3 secondes, on peut calculer 33 termes\n",
+      "le dernier est 3524578\n"
+     ]
+    }
+   ],
+   "source": [
+    "i,n = 0,0\n",
+    "@decorators.timeout(t) # implémentation interrompant la thread\n",
+    "def fibloop():\n",
+    "    global i,n\n",
+    "    while True: # boucle infinie sans le décorateur ...\n",
+    "        i=i+1\n",
+    "        n=fib(i)\n",
+    "        \n",
+    "try:\n",
+    "    fibloop()\n",
+    "except decorators.TimeoutError:\n",
+    "    print('en %d secondes, on peut calculer %d termes'%(t,i))\n",
+    "    print('le dernier est',n)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -348,8 +342,10 @@
     }
    ],
    "source": [
+    "#implémentation au niveau de l'itérateur de boucle\n",
+    "# dommage, pas de @itimeout for ... \n",
     "try:\n",
-    "    for i in decorators.itimeout(itertools.count(),t): # dommage, pas de @itimeout for ... \n",
+    "    for i in decorators.itimeout(itertools.count(),t):\n",
     "        n=mfib(i)\n",
     "except decorators.TimeoutError:\n",
     "    print('en %d secondes, on peut calculer %d termes'%(t,i))\n",
